cargo-features = ["trim-paths"]

[workspace]
members = [
    "cfg",
    "ast",
    "lua51-lifter",
    "lua51-deserializer",
    "luau-lifter",
    "restructure",
    "luau-worker",
]

[workspace.package]
edition = "2024"
authors = [
    "Mathias Pedersen <mathias.pedersen834@gmail.com>",
    "Jujhar Singh <jujharsmc@gmail.com>",
    "Amit Bashan <amit.bashan@icloud.com>",
]

[profile.release]
debug = false
lto = true
strip = true
panic = "abort"
trim-paths = true
